--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,9 +20,10 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="de.uni_passau.fim.se2.intelligame.services.MyApplicationService"/>
         <projectService serviceImplementation="de.uni_passau.fim.se2.intelligame.services.ProjectService"/>
-        <notificationGroup id="Custom Notification Group" displayType="BALLOON"/>
+        <projectService serviceImplementation="de.uni_passau.fim.se2.intelligame.services.LeaderboardService"/>
+        <notificationGroup id="Gamification" displayType="BALLOON"/>
         <!-- Change the id to something else (e.g. Personal ID) for the control group and change the group MyBundle.properties -->
-        <toolWindow factoryClass="de.uni_passau.fim.se2.intelligame.components.AchievementToolWindow" id="Achievements"/>
+        <toolWindow factoryClass="de.uni_passau.fim.se2.intelligame.components.AchievementToolWindow" id="Gamification"/>
         <postStartupActivity implementation="de.uni_passau.fim.se2.intelligame.listeners.ProjectActivity" />
     </extensions>
 </idea-plugin>
