--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -2,7 +2,4 @@ name=Plugin
 applicationService=Application service
 projectService=Project service: {0}
 
-projectURL=
-projectToken=
-projectName=
-group=treatment
+websocketURL=ws://localhost:7485
