--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,5 +1,2 @@
 name=Plugin
-applicationService=Application service
-projectService=Project service: {0}
-
-websocketURL=ws://localhost:7485
+websocketURL=ws://localhost:7485/ws
