Add disconnected WS notification & send files to server

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,5 +24,6 @@
         <!-- Change the id to something else (e.g. Personal ID) for the control group and change the group MyBundle.properties -->
         <toolWindow factoryClass="de.uni_passau.fim.se2.intelligame.components.GamificationToolWindow" id="Gamification"/>
         <postStartupActivity implementation="de.uni_passau.fim.se2.intelligame.listeners.ProjectActivity" />
+        <editorNotificationProvider implementation="de.uni_passau.fim.se2.intelligame.components.WebSocketNotConnectedNotificationProvider"/>
     </extensions>
 </idea-plugin>
