--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,4 +1,4 @@
 name=Plugin
-websocketURL=ws://localhost:7485/ws
-apiURL=http://localhost:3000/api/v1
+websocketURL=wss://gamification.thibber.be/ws
+apiURL=https://gamification.thibber.be/api/v1
 heartbeatInterval=30000
