--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ pluginRepositoryUrl = https://github.com/ThibBer/IntelliGame
 pluginSinceBuild = 243
 pluginUntilBuild = 252.*
 
-platformType = IC
+platformType = IU
 platformVersion = 2024.3
 platformDownloadSources = true
 
