--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 
 pluginGroup = de.uni_passau.fim.se2.intelligame
 pluginName = IntelliGame
-pluginVersion = 0.1.3
+pluginVersion = 0.1.3-beta
 pluginRepositoryUrl = https://github.com/ThibBer/IntelliGame
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
@@ -12,7 +12,7 @@ pluginSinceBuild = 243
 pluginUntilBuild = 252.*
 
 platformType = IU
-platformVersion = 2024.3
+platformVersion = 2024.3.5
 platformDownloadSources = true
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
@@ -20,6 +20,8 @@ platformDownloadSources = true
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins = com.intellij.java
+
+bundledModules = intellij.platform.coverage, intellij.platform.coverage.agent
 
 # Java language level used to compile sources and to generate the files for Java 21 is required since 2024.2+
 # https://plugins.jetbrains.com/docs/intellij/api-changes-list-2024.html
