--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,22 @@
 [versions]
 # libraries
 junit = "4.13.2"
+gson = "2.12.1"
+okhttp = "5.0.0-alpha.14"
+commonsText = "1.10.0"
 
 # plugins
 changelog = "2.2.1"
-intelliJPlatform = "2.5.0"
+intelliJPlatform = "2.4.0"
 kotlin = "2.1.20"
-kover = "0.9.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+commonsText = { group = "org.apache.commons", name = "commons-text", version.ref = "commonsText" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
 intelliJPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "intelliJPlatform" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
