Delete debugging achievements, add excluded test classes, update achievements levels & save coverage data

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -2,4 +2,4 @@ name=Plugin
 websocketURL=wss://gamification.thibber.be/ws
 apiURL=https://gamification.thibber.be/api/v1
 heartbeatInterval=30000
-excludedTestClasses=ExampleTest
+excludedTestClasses=ExampleTest, Example
